src/App.css
/*------GLOBAL STYLES------*/
* {
  box-sizing: border-box;
  font-family: "Noto Sans TC", sans-serif;
}

body {
  margin: 0;
}

.skip-to-main {
  position: absolute;
  top: -77px;
  background: rgb(255, 230, 0);
  color: #002f5b;
  padding: 10px;
  height: 75px;
  width: 100%;
  font-size: 1.5em;
}

.skip-to-main:focus {
  top: 0;
}

.hide {
  display: none;
}

/*------HEADER component------*/
header {
  display: flex;
  justify-content: space-between;
  margin: 0;
  background-image: url("https://images.unsplash.com/photo-1507608869274-d3177c8bb4c7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8ccfcc13bfcdfca6f54a8e043ffbe075&w=1000&q=80");
  background-size: cover;
  border-bottom: solid 1px rgb(226, 63, 18);
}

.big-header {
  height: 80vh;
}

.small-header {
  height: auto;
}

header img {
  height: 100px;
}

.title-nav-bar {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.logo-name-container {
  display: flex;
  margin: 0 0 0 40px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.logo-name-container a {
  display: flex;
}

.nav-container {
  padding-top: 30px;
}

nav {
  display: flex;
  margin-right: 20px;
}

h1 {
  margin: 0;
  /* padding-top: 10px; */
  color: rgb(255, 230, 0);
  font-size: 2.5em;
  font-family: "Covered By Your Grace", cursive;
}

nav a {
  padding: 30px 10px;
  color: white;
  font-size: 1.2em;
  text-decoration: underline;
}

nav a:hover {
  font-weight: bold;
}

a {
  text-decoration: none;
}

.welcome-blob {
  position: relative;
  top: -340px;
  text-align: center;
  margin-bottom: -190px;
}

.welcome-blob h2 {
  margin: 0;
  font-size: 4em;
  color: white;
}

/*------SIGNUP and LOGIN components------*/
.signup-page,
.login-page {
  display: flex;
  justify-content: center;
  background-color: rgba(206, 206, 206);
  height: 100vh;
  min-height: 600px;
}
.signup-page h2,
.login-page h2,
.create-post-page h2 {
  text-align: center;
}

.signup-container,
.login-container {
  width: 50%;
  margin-top: 100px;
  background-color: white;
  height: 400px;
  position: relative;
}

.signup-form,
.login-form {
  display: flex;
  flex-direction: column;
  margin: 0 60px 30px;
}

input,
textarea {
  font-size: 1em;
  padding: 10px;
  margin-bottom: 5px;
}

button {
  font-size: 1em;
  background-color: rgb(226, 63, 18);
  color: white;
  padding: 15px;
  font-weight: bold;
  border: none;
  margin-top: 15px;
}

.close-button {
  color: rgb(226, 63, 18);
  background: none;
  border: none;
  font-size: 2.5em;
  position: absolute;
  top: -2%;
  right: 4%;
  padding: 0;
  font-weight: bold;
}

.log-out-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 50px;
}

/*------HOMEPAGE - POST component------ */
.all-posts {
  column-count: 3;
  width: 80%;
  margin: 10px auto;
  text-align: center;
}

.inline-block {
  display: inline-block;
}

.post-container {
  border: 2px solid rgb(226, 63, 18);
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 304px;
  margin: 10px;
}

.post-container p,
.post-detail-post p {
  text-align: center;
  font-size: 1.5em;
  padding: 0 4px;
  font-family: "Open Sans Condensed", sans-serif;
  margin: 10px;
}

.post-container img {
  width: 300px;
}

/*-----------------------*/
/*------POST DETAIL------*/
/*-----------------------*/

/*------PostDetail component------*/

.post-detail-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  margin: 0 auto;
}

.post-detail-post {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 404px;
  border: 2px solid rgb(226, 63, 18);
  margin-top: 30px;
}

/*------Post Detail Actions------*/

.post-detail-actions {
  display: flex;
  width: 400px;
  margin: 10px 0 50px;
  align-items: center;
}

.post-love-send,
.post-edit-delete,
.post-love-count {
  display: flex;
}

.post-detail-actions i {
  margin: 5px;
}

.post-detail-actions .link,
.actions-button {
  background-color: white;
  color: black;
  padding: 0;
  text-decoration: none;
  font-size: 1.5em;
}

.love-count {
  margin-right: 20px;
}

.post-edit-and-delete {
  display: flex;
}

.edit-icon {
  margin: 0 20px;
}

/*-----------------------*/
/*------CREATE POST------*/
/*----------&------------*/
/*------EDIT POST--------*/
/*-----------------------*/

/*------CreatePostPage component------*/

.create-post-container,
.post-edit-page {
  display: flex;
}
/*------POSTBUILDER component ------*/
.col-1 {
  display: flex;
  flex-direction: column;
  width: 60%;
  margin: 0 auto;
}

.post-builder-container h2 {
  margin: 40px auto 40px;
}

.post-builder-container h3 {
  margin: 0 auto 40px;
  text-align: center;
}

.find-quote-link {
  text-decoration: underline;
  text-align: center;
  margin-top: 30px;
}
/*------SELECTIMAGE component------*/
.col-2 {
  width: 40%;
}
/*------NEWPOST component------*/
.new-post-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.edit-post-container {
  margin-top: 50px;
}

.post-image-placeholder {
  width: 400px;
  border: 2px dashed lightgray;
  line-height: 0;
}

.post-image-placeholder img {
  width: 396px;
}

.post-text-placeholder {
  width: 400px;
  border-style: dashed;
  border-color: lightgray;
}

.text-bottom {
  margin-top: 5px;
}

.post-done {
  width: 400px;
  margin-top: 10px;
  border: none;
}

.post-cancel {
  background-color: grey;
  border: none;
  color: white;
  margin-top: 7px;
  width: 400px;
}

/*------SELECT IMAGE component------*/
.select-image-container {
  border-left: 1px solid rgb(226, 63, 18);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.select-image-container h3 {
  margin-top: 50px;
  font-size: 1.3em;
}

.select-image-container img {
  width: 300px;
  border: 1px solid grey;
}

/*------QUOTE FINDER component ------*/

.quote-finder-container h2 {
  text-align: center;
}

.quote-columns {
  display: flex;
}

.ron-quotes,
.jack-quotes {
  width: 45%;
  margin: 1% 5%;
}

/*-----------------------*/
/*------EMAIL POST-------*/
/*-----------------------*/

.email-form-container,
.email-form {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.render-email-form {
  width: 100%;
}

textarea {
  color: grey;
  border-color: lightgrey;
  min-height: 100px;
}

.email-cancel-button {
  background-color: grey;
  margin: 5px 0;
}

/*-------------------------------*/
/*------SMALL SCREEN STYLES------*/
/*-------------------------------*/

@media only screen and (max-width: 470px) {
  /*------header------*/

  header {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .title-nav-bar {
    flex-direction: column;
    align-items: center;
  }

  .logo-name-container {
    margin: 0 auto;
  }

  nav {
    margin-right: 0;
  }

  .nav-container {
    position: absolute;
    top: 295px;
    margin: 0;
  }

  .small-screen-nav {
    display: flex;
    flex-direction: column;
  }

  nav a {
    padding: 10px;
    margin: 10px;
    background-color: white;
    font-size: 1.2em;
    text-decoration: none;
    color: #122563;
    text-align: center;
    font-weight: bold;
    border-radius: 5px;
  }

  .welcome-blob {
    margin-top: 0;
    margin-bottom: -125px;
    top: -380px;
  }

  .welcome-blob h2 {
    font-size: 2.9em;
  }

  /*------create post page------*/

  .create-post-container,
  .post-edit-page {
    flex-direction: column;
  }

  .post-text-placeholder,
  .post-image-placeholder {
    max-width: 300px;
  }

  .post-image-placeholder img {
    max-width: 296px;
  }
  .new-post-container button {
    max-width: 300px;
  }

  .select-image-container {
    width: 300px;
    margin: 0 auto;
    border: none;
  }

  .all-posts {
    -webkit-column-count: 1;
    column-count: 1;
    text-align: center;
    width: 100%;
  }

  .login-container,
  .signup-container {
    width: 90%;
  }

  .login-form,
  .signup-form {
    margin: 20px;
  }
}

@media only screen and (max-width: 780px) and (min-width: 471px) {
  .all-posts {
    -webkit-column-count: 1;
    column-count: 1;
  }

  .create-post-container,
  .post-edit-page {
    flex-direction: column;
  }
}

@media only screen and (max-width: 900px) and (min-width: 781px) {
  .all-posts {
    -webkit-column-count: 2;
    column-count: 2;
  }

  .create-post-container,
  .post-edit-page {
    flex-direction: column;
  }
}

@media only screen and (max-width: 900px) and (min-width: 471px) {
  /*------header------*/

  .welcome-blob {
    margin-bottom: -160px;
  }

  .welcome-blob h2 {
    font-size: 3.5em;
  }

  /*------sign up page------*/
  /*------login page------*/

  .login-container,
  .signup-container {
    width: 90%;
  }

  .login-form,
  .signup-form {
    margin: 20px;
  }

  .login-form button,
  .signup-form button {
    margin-top: 20px;
  }

  /*------post detail page------*/

  .col-1 {
    width: 300px;
  }

  .post-builder-container h2 {
    font-size: 1.3em;
    margin-bottom: 20px;
  }

  .post-detail-post {
    max-width: 304px;
    margin-top: 30px;
  }

  .post-detail-post img {
    max-width: 300px;
  }

  .post-detail-actions {
    max-width: 300px;
    margin-bottom: 30px;
  }

  .render-email-form {
    min-width: 300px;
  }

  .email-form-container h2 {
    text-align: center;
    margin-top: 0;
  }
}

@media only screen and (max-width: 1160px) and (min-width: 901px) {
  .all-posts {
    -webkit-column-count: 2;
    column-count: 2;
    width: 70%;
    margin: 10px auto;
  }
}

